<resources>
    <string name="app_name">MijnBD</string>

    <!-- Bottom menu bar: -->
    <string name="lbl_deliveries">Bezorgingen</string>
    <string name="lbl_history">Historie</string>
    <string name="lbl_preferences">Mijn B.D.</string>

    <!-- vehicles: -->
    <string name="V1">Fiets</string>
    <string name="V2_3">Motor/Scooter</string>
    <string name="V4">Auto</string>
    <string name="VNone">Geen</string>

    <!-- General -->
    <string name="lbl_minutes_full">Minuten</string>
    <string name="lbl_hours_full">Uren</string>
    <string name="lbl_seconds_short">sec.</string>
    <string name="lbl_minutes_short">min.</string>
    <string name="lbl_hours_short">u.</string>
    <string name="lbl_kilometers_short">km.</string>
    <string name="lbl_edit">wijzig</string>
    <string name="lbl_distance">km. afstand</string>
    <string name="lbl_euro">€</string>
    <string name="unknown">\?</string>
    <string name="lbl_destination">Bestemming</string>
    <string name="lbl_your_position">Jouw positie</string>
    <string name="try_again">Probeer opnieuw</string>
    <string name="confirm">Bevestig</string>
    <string name="cancel">Annuleer</string>
    <string name="from">Van</string>
    <string name="to">Tot</string>
    <string name="sure_delete">Weet u zeker dat u dit wilt verwijderen?</string>
    <string name="open_maps">Open kaart</string>

    <!-- Location dialog -->
    <string name="loc_permission">Deze app heeft locatie toegang nodig om te functioneren. Geef de app alstublieft permissie uw locatie te gebruiken.</string>
    <string name="to_settings">Naar instellingen</string>
    <string name="close_app">Sluit app</string>

    <!-- Error -->
    <string name="showerror_500">Oeps er ging iets mis bij het ophalen van uw gegevens :(</string>
    <string name="E500">Oops something went wrong, try again later.</string>
    <string name="E401">Oops permission denied.</string>
    <string name="wrong_phone">Geen valide telefoonnummer</string>
    <string name="wrong_email">Geen valide E-mail adres</string>
    <string name="no_permission">Toegang geweigerd</string>
    <string name="av_startend">Start en eind tijd mogen niet hetzelfde zijn.</string>
    <string name="av_same">U heeft deze beschikbaarheid al opgegeven.</string>
    <string name="av_overlap">Uw beschikbaarheid overlapt met een eerder opgegeven beschikbaarheid.</string>

    <!-- Login: -->
    <string name="username">E-mail</string>
    <string name="password">Wachtwoord</string>
    <string name="login">Login</string>
    <string name="nocreds">Vul uw E-mailadres en wachtwoord in.</string>
    <string name="wrongcreds">Onjuist E-mailadres of wachtwoord.</string>

    <!-- Bezorgingen: -->
    <!-- Incoming: -->
    <string name="title_assignment">Opdracht</string>
    <string name="lbl_have_patience_message">Even geduld a.u.b&#8230; \nPotentiële bezorgingen verschijnen snel hier </string>
    <string name="lbl_earnings">Verdiensten</string>
    <string name="lbl_delivery">Bezorging</string>
    <string name="lbl_estimated_travel_time">Geschatte reistijd</string>
    <string name="lbl_maximum_arrival_time">Uiterlijke levertijd</string>
    <string name="lbl_to_accept">om te accepteren</string>

    <!-- Getting delivery: -->
    <string name="lbl_call_warehouse">Bel magazijn</string>
    <string name="lbl_cancel">Annuleer</string>
    <string name="lbl_assignment_warehouse">Haal de bezorging op bij het magazijn</string>
    <string name="lbl_open_maps">Open route in Google Maps</string>
    <string name="lbl_delivery_picked_up">Bestelling opgehaald</string>

    <!-- Delivering delivery: -->
    <string name="lbl_assignment_client">Bezorg de bestelling</string>
    <string name="lbl_delivery_delivered">Bestelling afgeleverd</string>

    <!-- Cancel: -->
    <string name="lbl_cancel_reason">Wat is de reden voor de annulering?</string>
    <string name="lbl_cancel_example">Bijvoorbeeld: voertuig defect</string>
    <string name="lbl_cancel_example_optional">Bijvoorbeeld: voertuig defect (optioneel)</string>
    <string name="lbl_cancel_return_question">Ik ben in staat om de bezorging terug te brengen naar het magazijn</string>
    <string name="lbl_cancel_return_assignment">Breng de bestelling terug naar het magazijn</string>
    <string name="lbl_cancel_no_return">MijnBD neemt zo spoedig mogelijk contact met u op</string>
    <string name="lbl_send_button">Verstuur</string>
    <string name="lbl_cancel_order_returned">Bestelling teruggebracht</string>

    <!-- Delivery successful screen: -->
    <string name="title_success">Succes</string>
    <string name="lbl_delivery_successful">Succesvol bezorgd</string>
    <string name="lbl_total_earnings">Totale verdiensten</string>
    <string name="lbl_today">vandaag</string>
    <string name="lbl_week">week</string>
    <string name="lbl_month">maand</string>
    <string name="lbl_check_details">Bekijk details</string>
    <string name="lbl_new_assignment">Nieuwe opdracht</string>
    <string name="lbl_delivery_cancelled">Bezorging geannuleerd</string>

    <!-- MijnBD Overview: -->
    <string name="lbl_mybdpersonalia">Mijn Bezorg.Direct</string>
    <string name="lbl_mot">Vervoer:</string>
    <string name="lbl_payoutpd">€/bezorging:</string>
    <string name="lbl_payouttotal">Totale verdiensten:</string>
    <string name="lbl_availability">Beschikbaarheid</string>
    <string name="btn_availability">beschikbaarheid</string>
    <string name="btn_info">info</string>
    <string name="btn_mot">vervoer</string>


    <!-- MijnBD Info: -->
    <string name="lbl_mybdinfo">Wijzig Personalia</string>
    <string name="lbl_name">Naam:</string>
    <string name="lbl_address">Adres:</string>
    <string name="lbl_dateofbirth">Geboortedatum:</string>
    <string name="lbl_driverslicenses">Rijbewij(s)(zen):</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_phonenumber">Telefoonnummer:</string>

    <!-- MijnBD Beschikbaarheid: -->
    <string name="lbl_mybdavailability">Beschikbaarheid</string>
    <string name="lbl_selectweek">Selecteer Week</string>
    <string name="availability_empty">Geen beschikbaarheid opgegeven, druk op de witte plus knop!</string>
    <string name="lbl_date">Datum</string>
    <string name="lbl_starttime">Starttijd</string>
    <string name="lbl_endtime">Eindtijd</string>
    <!-- MijnBD vervoer: -->
    <string name="lbl_mybdmottitle">Bezorgvoorkeuren</string>
    <string name="lbl_mybdmot">Vervoersmiddel</string>
    <string name="lbl_radius">Bezorgradius</string>


    <!-- Historie: -->
    <string name="title_order_details">Order details</string>
    <string name="lbl_order_submitted">Order geplaatst</string>
    <string name="lbl_warehouse_pickup_text">Order opgehaald</string>
    <string name="lbl_accepted_text">Geaccepteerd</string>
    <string name="lbl_reward_header">Verdiensten</string>
    <string name="lbl_tip_text">Fooi</string>
    <string name="lbl_reward_text">Totaal</string>
    <string name="lbl_add">+</string>

    <string name="history_empty">Geen historie beschikbaar, succes bij uw eerste opdracht!</string>

    <string name="btn_bicycle">Fiets</string>
    <string name="btn_motorcycle">Scooter/Motor</string>
    <string name="btn_car">Auto</string>
    <string name="lbl_radkm1">0 km.</string>
    <string name="lbl_radiustext">Radius vanaf huisadres: </string>

    <!-- Notifications -->
    <string name="lbl_channel_name">mijnbd_notification_channel</string>
    <string name="lbl_earn">Verdien</string>
    <!-- Status -->
    <string name="stat_0">Afgemeld</string>
    <string name="stat_1">Aangekondigd</string>
    <string name="stat_2">Bevestigd</string>
    <string name="stat_3">Onderweg</string>
    <string name="stat_4">Afgeleverd</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
