<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_clipboard_list"
        android:title="@string/lbl_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_deliveries"
        android:enabled="true"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/lbl_deliveries"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_mybd"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/lbl_preferences"
        app:showAsAction="ifRoom"
        />
</menu>