<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:id="@+id/cancel_fragment_layout">

    <include layout="@layout/toolbar" />
    <include layout="@layout/spinner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="70dp">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/lbl_cancel_reason"
           android:textColor="@color/colorPrimary"
           android:textSize="@dimen/text_size_h2"
           android:textStyle="bold"
           android:textAlignment="center"/>

        <EditText
            android:id="@+id/txt_cancel_input"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/rounded_white_input"
            android:hint="@string/lbl_cancel_example"
            android:paddingBottom="170dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <CheckBox
                android:id="@+id/cb_driver_can_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:checked="true"
                android:background="@drawable/rounded_white_input"/>

            <TextView
                android:id="@+id/cb_driver_can_return_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_cancel_return_question"
                android:textColor="@color/white"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="-10dp"/>
        </LinearLayout>


        <com.ncorti.slidetoact.SlideToActView
            android:id="@+id/btn_cancel_finish"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:outer_color="@color/white"
            app:inner_color="@color/colorPrimary"
            app:slider_icon_color="@color/colorPrimaryDark"
            app:text_color="@color/colorPrimaryDark"
            app:text="@string/lbl_cancel"
            android:layout_marginBottom="10dp"
            app:text_style="bold"/>
    </LinearLayout>
</RelativeLayout>