<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark">
<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity"
        android:gravity="center_horizontal"
        >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/lbl_mijnbd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity"
       >
    <TextView
        android:id="@+id/lbl_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
       />

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"
        android:background="@drawable/rounded_white_input"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/lbl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="70dp"
        android:textSize="26sp"
        />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/rounded_white_input"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="40dp"
        android:padding="5dp"
        />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/rounded_gold_btn"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:radius="8dp"
            android:textSize="26sp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>