<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/colorPrimaryDark"
    android:background="@color/darkGray"
    >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loc_permission"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btn_perm_go_settings"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/to_settings"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:layout_marginEnd="10dp"/>
                    <Button
                        android:id="@+id/btn_perm_close_app"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:background="@color/colorPrimary"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/close_app"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</FrameLayout>