<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">
    <include layout="@layout/toolbar" />
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_mybdmos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_mybdmos"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_bicycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_gray_section"
            android:text="@string/btn_bicycle"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_motorcycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_gray_section"
            android:text="@string/btn_motorcycle"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_gray_section"
            android:text="@string/btn_car"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/lbl_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_radius"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_gray_section"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_radkm1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:text="@string/lbl_radkm1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />

                <SeekBar
                    android:id="@+id/sb_radius"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:progressBackgroundTint="@color/colorPrimary"
                    android:progressTint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/lbl_radkm2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:text="@string/lbl_radkm2"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_radiustext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text="@string/lbl_radiustext"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/lblradiusvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
</ScrollView>
</LinearLayout>

