<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btn_call_warehouse"
                style="@android:style/ButtonBar"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:drawableStart="@drawable/ic_phone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/lbl_call_warehouse"
                android:textAllCaps="false"
                android:background="@drawable/rounded_white_input"/>
            <Button
                android:id="@+id/btn_cancel_delivery"
                style="@android:style/ButtonBar"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_cancel_small"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/lbl_cancel"
                android:textAllCaps="false"
                android:background="@drawable/rounded_white_input"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_gray_section"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <ImageView
                    android:id="@+id/img_delivering_destination"
                    android:contentDescription="@string/lbl_assignment_warehouse"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_warehouse_w"/>
                <TextView
                    android:id="@+id/lbl_assignment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_h3"
                    android:textColor="@color/white"
                    android:text="@string/lbl_assignment_warehouse"
                    android:layout_marginStart="20dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_address"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_text"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/lbl_delivering_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_address"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_text"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lbl_delivering_zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_zip"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_text"
                android:textStyle="bold"/>

            <fragment
                android:id="@+id/fragment_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

            <Button
                android:id="@+id/btn_delivering_completed"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_yellow_section"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_warehouse_pickup_text"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>